Attempted to integrate datecheck.js into site and added many new things

--- a/assets/header-slideshow.css
+++ b/assets/header-slideshow.css
@@ -56,6 +56,9 @@
 
 
 .header-slide {
+    background-size: cover;
+    background-position: center 28%;
+
     animation: var(--loop);
     animation-name: var(--name);
     animation-duration: var(--duration);
