--- a/assets/main_style.css
+++ b/assets/main_style.css
@@ -61,10 +61,11 @@ h4 {
 	color: white;
 	font-family: Minecraft;
 }
-
+.active {
+	background-color: rgba(247,101,173,1.00);
+}
 .navbar-item {
-	background-color: rgba(247,101,173,0.00);
-	border-radius: 10px;
+	border-bottom: 5px solid rgba(247,101,173,1.00);
 	width: 150px;
 	color: white;
 	transition: .1s;
@@ -78,4 +79,18 @@ h4 {
 
 .nav-link {
 	cursor: pointer;
+}
+
+.btn-5 {
+  border: 1px solid #FFFFFF00;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  text-shadow: none;
+  -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-5:hover {
+  border: 1px solid #FFFFFF;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  text-shadow: 1px 1px 2px #427388;
 }
