--- a/assets/main_style.css
+++ b/assets/main_style.css
@@ -1,34 +1,5 @@
 @charset "utf-8";
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|IBM+Plex+Sans|Pacifico|Roboto&display=swap");
-
-/* Fonts */
-@font-face {
-    font-family: PT_Sans;
-    src: url("fonts/PTSans-Regular.ttf");
-}
-
-@font-face {
-    font-family: PT_Sans;
-    src: url("fonts/PTSans-Bold.ttf");
-    font-weight: bold;
-}
-
-@font-face {
-    font-family: PT_Sans;
-    src: url("fonts/PTSans-BoldItalic.ttf");
-    font-weight: bold;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: PT_Sans;
-    src: url("fonts/PTSans-Italic.ttf");
-    font-style: italic;
-}
-@font-face {
-    font-family: "Minecraft";
-    src: url("fonts/Minecraftia-Regular.ttf");
-}
+@import url("fonts.css");
 
 
 /* Start CSS */
