--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|IBM+Plex+Sans|Pacifico|Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 @import url("../fonts/fonts.css");
+@import url("../vectors/vector.css");
 
 :root {
     --header-height: 4in;
@@ -12,7 +13,9 @@ html,
 body {
     margin: 0;
 }
-
+i[data-icon="saki-face"] {
+    padding-right: 10px;
+}
 rigs-dropdown[id="rdp"] {
     width: 100%;
     display: flex;
@@ -33,16 +36,20 @@ rigs-dropdown[id="rdp"] {
 }
 .rdp:hover {
     background-color: rgba(0,0,0,.50);
-    background-size: 150%;
+    background-size: 125%;
 }
-.rdp:before {
-    -webkit-filter: blur(10px);
-    -moz-filter: blur(10px);
-    -o-filter: blur(10px);
-    -ms-filter: blur(10px);
-    filter: blur(10px);
-}
+.close-rdp {
+    position: absolute;
+    color: white;
+    font-size: 48px;
+    width: 30px;
+    cursor: pointer;
+    right: -.2in;
+    opacity: 0;
 
+    transition: 500ms;
+}
+.material-icons.md-36 { font-size: 36px;}
 .rdp-title {
     text-align: center;
     color: white;
@@ -67,6 +74,7 @@ rigs-dropdown[id="rdp"] {
     background-color: rgba(255,255,255,0);
     transition: 500ms;
     cursor: pointer;
+    border-radius: 15px;
 }
 
 .opacity-100 {
@@ -75,29 +83,36 @@ rigs-dropdown[id="rdp"] {
 .rdp-btn:hover {
     background-color: rgba(255,255,255,1);
     color: black;
+    border-radius: 0px;
 }
+
 .header-contain {
     width: 100%;
     height: var(--header-height);
 }
-
 .header-contain {
     height: var(--header-height);
 }
-
-.header-logo {
+.navigation {
     color: white;
-    height: 1in;
+    height: .5in;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    text-indent: .2in;
+    background-color: rgba(0,0,0,.20);
 }
-
-.header-logo:before {
-	-webkit-filter: blur(10px);
-    -moz-filter: blur(10px);
-    -o-filter: blur(10px);
-    -ms-filter: blur(10px);
-    filter: blur(10px);
+.nav-contian {
+    position: absolute;
+    right: 0;
+    transform: translateY(-100%);
 }
-
+.nav-item {
+    width: 200px;
+    text-align: center;
+    float: right;
+    cursor: pointer;
+}
 .header-content {
     width: 100%;
     top: 1in;
