Added more Content
SLACME Page Added

Responsive.js optimized and reduced

fixed various bugs

Removed Jquery from Site Directory

Reorganized SCSS Source File

--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -1,13 +1,20 @@
 @import url("../fonts/fonts.css");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&amp;display=swap");
-/* line 9, main_style.scss */
-html, body {
+/* line 10, main_style.scss */
+html,
+body {
   margin: 0;
   width: 100%;
   height: 100%;
 }
 
-/* line 15, main_style.scss */
+/* line 16, main_style.scss */
+.links {
+  color: pink;
+  text-decoration: underline;
+}
+
+/* line 22, main_style.scss */
 rigs-dropdown[id="rdp"] {
   width: 100%;
   display: flex;
@@ -17,57 +24,45 @@ rigs-dropdown[id="rdp"] {
   overflow: hidden;
   transition: 500ms;
 }
-
-/* line 26, main_style.scss */
-.rdp {
+/* line 31, main_style.scss */
+rigs-dropdown[id="rdp"] .close-rdp {
+  position: absolute;
+  color: white;
+  font-size: 48px;
+  width: 30px;
+  cursor: pointer;
+  right: -0.2in;
+  opacity: 0;
+  transition: 500ms;
+}
+/* line 42, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp {
   flex-basis: 50%;
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: multiply;
   transition: 500ms;
   background-size: 115%;
 }
-
-/* line 34, main_style.scss */
-.rdp:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-  background-size: 125%;
-}
-
-/* line 39, main_style.scss */
-.close-rdp {
-  position: absolute;
-  color: white;
-  font-size: 48px;
-  width: 30px;
-  cursor: pointer;
-  right: -.2in;
-  opacity: 0;
-  transition: 500ms;
-}
-
-/* line 51, main_style.scss */
-.material-icons.md-36 {
+/* line 49, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .material-icons.md-36 {
   font-size: 36px;
 }
-
-/* line 55, main_style.scss */
-.rdp-title {
+/* line 53, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .rdp-title {
   text-align: center;
   color: white;
   font-family: Minecraft;
   height: 100%;
 }
-
-/* line 62, main_style.scss */
-.rdp-title h2 {
+/* line 60, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .rdp-title h2 {
   position: relative;
   top: 0in;
   opacity: 0;
   transition: 500ms;
 }
-
-/* line 70, main_style.scss */
-.rdp-btn {
+/* line 68, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .rdp-btn {
   position: relative;
   top: 1.2in;
   width: 150px;
@@ -80,31 +75,34 @@ rigs-dropdown[id="rdp"] {
   cursor: pointer;
   border-radius: 15px;
 }
-
-/* line 84, main_style.scss */
-.opacity-100 {
+/* line 81, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .rdp-btn:hover {
+  background-color: white;
+  border-radius: 3px;
+  color: black;
+}
+/* line 87, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp .opacity-100 {
   opacity: 100%;
 }
-
-/* line 88, main_style.scss */
-.rdp-btn:hover {
-  background-color: white;
-  color: black;
-  border-radius: 0px;
+/* line 92, main_style.scss */
+rigs-dropdown[id="rdp"] .rdp:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  background-size: 125%;
 }
 
-/* line 95, main_style.scss */
+/* line 99, main_style.scss */
 .header-contain {
   width: 100%;
   height: 4in;
   background-size: cover;
 }
-/* line 101, main_style.scss */
+/* line 105, main_style.scss */
 .header-contain .navigation {
   height: 32px;
   display: flex;
 }
-/* line 106, main_style.scss */
+/* line 110, main_style.scss */
 .header-contain .navigation .nav-logo {
   display: flex;
   flex-basis: 50%;
@@ -112,12 +110,12 @@ rigs-dropdown[id="rdp"] {
   height: 47px;
   position: absolute;
 }
-/* line 113, main_style.scss */
+/* line 117, main_style.scss */
 .header-contain .navigation .nav-logo .logoIco {
   width: 47px;
   content: url("https://sakura-sedaia.com/assets/images/Favicon/favicon-32x32.png");
 }
-/* line 118, main_style.scss */
+/* line 122, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt {
   padding-left: 10px;
   overflow-y: hidden;
@@ -131,12 +129,12 @@ rigs-dropdown[id="rdp"] {
   padding-right: 20px;
   width: 140px;
 }
-/* line 131, main_style.scss */
+/* line 135, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt span {
   position: absolute;
   transform: translateY(2px);
 }
-/* line 139, main_style.scss */
+/* line 143, main_style.scss */
 .header-contain .navigation .nav-contain {
   display: flex;
   width: 50vw;
@@ -144,7 +142,7 @@ rigs-dropdown[id="rdp"] {
   right: 0;
   position: absolute;
 }
-/* line 148, main_style.scss */
+/* line 152, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item {
   flex-basis: 25%;
   border-bottom: 5px solid rgba(255, 255, 255, 0);
@@ -159,14 +157,14 @@ rigs-dropdown[id="rdp"] {
   font-family: "Noto Sans JP";
   font-size: 16px;
 }
-/* line 162, main_style.scss */
+/* line 166, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item[active="true"] {
   border-bottom: 5px solid;
   background-color: white;
   color: black;
   border-color: pink;
 }
-/* line 168, main_style.scss */
+/* line 172, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item:hover {
   border-bottom: 5px solid pink;
   flex-basis: 25%;
@@ -174,31 +172,31 @@ rigs-dropdown[id="rdp"] {
   padding-top: 10px;
   background-color: rgba(25, 25, 25, 0.5);
 }
-/* line 180, main_style.scss */
+/* line 184, main_style.scss */
 .header-contain .header-text {
   position: absolute;
   transform: translateY(1in);
 }
-/* line 184, main_style.scss */
+/* line 188, main_style.scss */
 .header-contain .header-text h1 {
   font-family: PT_Sans;
   font-weight: bold;
   color: #fff5f5;
   text-indent: 1in;
 }
-/* line 190, main_style.scss */
+/* line 194, main_style.scss */
 .header-contain .header-text h4 {
   color: #fff5f5;
   font-family: Minecraft;
   text-indent: 0.75in;
 }
 
-/* line 200, main_style.scss */
+/* line 204, main_style.scss */
 .about-sacr .title-sacr {
   width: 100%;
   height: 100%;
 }
-/* line 204, main_style.scss */
+/* line 208, main_style.scss */
 .about-sacr .title-sacr .title-text {
   position: absolute;
   z-index: 0;
@@ -208,19 +206,19 @@ rigs-dropdown[id="rdp"] {
   border-radius: 10px;
   background-color: #00000090;
 }
-/* line 213, main_style.scss */
+/* line 217, main_style.scss */
 .about-sacr .title-sacr .title-text h1 {
   font-family: PT_Sans;
   text-indent: 1in;
   color: white;
 }
-/* line 218, main_style.scss */
+/* line 222, main_style.scss */
 .about-sacr .title-sacr .title-text h3 {
   font-family: Minecraft;
   font-size: 16px;
   color: white;
 }
-/* line 225, main_style.scss */
+/* line 229, main_style.scss */
 .about-sacr .title-sacr .title-bg {
   content: inherit;
   background-color: #fff5f525;
@@ -233,7 +231,7 @@ rigs-dropdown[id="rdp"] {
   background-image: url("https://sakura-sedaia.com/assets/images/WPRenders/SoWModTeam_Render.png");
 }
 
-/* line 240, main_style.scss */
+/* line 244, main_style.scss */
 .rig-download-section {
   height: 2in;
   background-color: #333;
@@ -242,15 +240,15 @@ rigs-dropdown[id="rdp"] {
   color: #fff5f5;
   display: flex;
 }
-/* line 248, main_style.scss */
+/* line 252, main_style.scss */
 .rig-download-section h1 {
   font-family: PT_Sans;
 }
-/* line 251, main_style.scss */
+/* line 255, main_style.scss */
 .rig-download-section span {
   font-family: "Roboto";
 }
-/* line 254, main_style.scss */
+/* line 258, main_style.scss */
 .rig-download-section .download-lr {
   background-color: transparent;
   border: none;
@@ -281,60 +279,60 @@ rigs-dropdown[id="rdp"] {
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 289, main_style.scss */
+/* line 290, main_style.scss */
 .rig-download-section .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 294, main_style.scss */
+/* line 295, main_style.scss */
 .rig-download-section .download-extra {
   text-decoration: none;
 }
-/* line 297, main_style.scss */
+/* line 298, main_style.scss */
 .rig-download-section .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 301, main_style.scss */
+/* line 302, main_style.scss */
 .rig-download-section .rds-col {
   flex-basis: 50%;
 }
-/* line 304, main_style.scss */
+/* line 305, main_style.scss */
 .rig-download-section .rds-col img {
   position: relative;
   transform: translateY(-15%);
 }
-/* line 309, main_style.scss */
+/* line 310, main_style.scss */
 .rig-download-section .rds-background {
   flex-basis: 25%;
   min-width: 600px;
 }
 
-/* line 316, main_style.scss */
+/* line 317, main_style.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 320, main_style.scss */
+/* line 321, main_style.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 326, main_style.scss */
+/* line 327, main_style.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 331, main_style.scss */
+/* line 332, main_style.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 336, main_style.scss */
+/* line 337, main_style.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
