--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,4 +1,8 @@
-/* Fonts */
+/* External Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&amp;display=swap");
+
+
+/* Internal Fonts */
 @font-face {
     font-family: PT_Sans;
     src: url("PTSans-Regular.ttf");
