--- a/assets/styles/main_style.css
+++ b/assets/styles/main_style.css
@@ -5,15 +5,16 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  font-family: "Open Sans";
 }
 
-/* line 15, main_style.scss */
+/* line 16, main_style.scss */
 .links {
   color: pink;
   text-decoration: underline;
 }
 
-/* line 21, main_style.scss */
+/* line 22, main_style.scss */
 rigs-dropdown[id="rdp"] {
   width: 100%;
   display: flex;
@@ -23,7 +24,7 @@ rigs-dropdown[id="rdp"] {
   overflow: hidden;
   transition: 500ms;
 }
-/* line 30, main_style.scss */
+/* line 31, main_style.scss */
 rigs-dropdown[id="rdp"] .close-rdp {
   position: absolute;
   color: white;
@@ -34,7 +35,7 @@ rigs-dropdown[id="rdp"] .close-rdp {
   opacity: 0;
   transition: 500ms;
 }
-/* line 41, main_style.scss */
+/* line 42, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp {
   flex-basis: 50%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -42,25 +43,25 @@ rigs-dropdown[id="rdp"] .rdp {
   transition: 500ms;
   background-size: 115%;
 }
-/* line 48, main_style.scss */
+/* line 49, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .material-icons.md-36 {
   font-size: 36px;
 }
-/* line 52, main_style.scss */
+/* line 53, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-title {
   text-align: center;
   color: white;
   font-family: Minecraft;
   height: 100%;
 }
-/* line 59, main_style.scss */
+/* line 60, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-title h2 {
   position: relative;
   top: 0in;
   opacity: 0;
   transition: 500ms;
 }
-/* line 67, main_style.scss */
+/* line 68, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-btn {
   position: relative;
   top: 1.2in;
@@ -74,34 +75,34 @@ rigs-dropdown[id="rdp"] .rdp .rdp-btn {
   cursor: pointer;
   border-radius: 15px;
 }
-/* line 80, main_style.scss */
+/* line 81, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .rdp-btn:hover {
   background-color: white;
   border-radius: 3px;
   color: black;
 }
-/* line 86, main_style.scss */
+/* line 87, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp .opacity-100 {
   opacity: 100%;
 }
-/* line 91, main_style.scss */
+/* line 92, main_style.scss */
 rigs-dropdown[id="rdp"] .rdp:hover {
   background-color: rgba(0, 0, 0, 0.5);
   background-size: 125%;
 }
 
-/* line 98, main_style.scss */
+/* line 99, main_style.scss */
 .header-contain {
   width: 100%;
   height: 4in;
   background-size: cover;
 }
-/* line 104, main_style.scss */
+/* line 105, main_style.scss */
 .header-contain .navigation {
   height: 32px;
   display: flex;
 }
-/* line 109, main_style.scss */
+/* line 110, main_style.scss */
 .header-contain .navigation .nav-logo {
   display: flex;
   flex-basis: 50%;
@@ -109,12 +110,12 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   height: 47px;
   position: absolute;
 }
-/* line 116, main_style.scss */
+/* line 117, main_style.scss */
 .header-contain .navigation .nav-logo .logoIco {
   width: 47px;
   content: url("https://sakura-sedaia.com/assets/images/Favicon/favicon-32x32.png");
 }
-/* line 121, main_style.scss */
+/* line 122, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt {
   padding-left: 10px;
   overflow-y: hidden;
@@ -128,12 +129,12 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   padding-right: 20px;
   width: 140px;
 }
-/* line 134, main_style.scss */
+/* line 135, main_style.scss */
 .header-contain .navigation .nav-logo .logoTxt span {
   position: absolute;
   transform: translateY(2px);
 }
-/* line 142, main_style.scss */
+/* line 143, main_style.scss */
 .header-contain .navigation .nav-contain {
   display: flex;
   width: 50vw;
@@ -141,7 +142,7 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   right: 0;
   position: absolute;
 }
-/* line 151, main_style.scss */
+/* line 152, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item {
   flex-basis: 25%;
   border-bottom: 5px solid rgba(255, 255, 255, 0);
@@ -156,14 +157,14 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: "Noto Sans JP";
   font-size: 16px;
 }
-/* line 165, main_style.scss */
+/* line 166, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item[active="true"] {
   border-bottom: 5px solid;
   background-color: white;
   color: black;
   border-color: pink;
 }
-/* line 171, main_style.scss */
+/* line 172, main_style.scss */
 .header-contain .navigation .nav-contain .nav-item:hover {
   border-bottom: 5px solid pink;
   flex-basis: 25%;
@@ -171,31 +172,53 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   padding-top: 10px;
   background-color: rgba(25, 25, 25, 0.5);
 }
-/* line 183, main_style.scss */
+/* line 184, main_style.scss */
 .header-contain .header-text {
   position: absolute;
   transform: translateY(1in);
 }
-/* line 187, main_style.scss */
+/* line 188, main_style.scss */
 .header-contain .header-text h1 {
   font-family: PT_Sans;
   font-weight: bold;
   color: #fff5f5;
   text-indent: 1in;
 }
-/* line 193, main_style.scss */
+/* line 194, main_style.scss */
 .header-contain .header-text h4 {
   color: #fff5f5;
   font-family: Minecraft;
   text-indent: 0.75in;
 }
 
-/* line 203, main_style.scss */
+/* line 202, main_style.scss */
+.xmasCounter {
+  border-top: 2px solid grey;
+  border-bottom: 2px solid grey;
+  padding: 10px;
+  background-color: #dfdfdf;
+}
+
+/* line 209, main_style.scss */
+.dev-warning {
+  border-top: 2px solid #E42D30;
+  border-bottom: 2px solid #E42D30;
+  padding: 10px;
+  background-color: #bc1215;
+  color: white;
+  font-family: "Open Sans";
+}
+/* line 217, main_style.scss */
+.dev-warning strong {
+  font-family: "Noto Sans JP";
+}
+
+/* line 224, main_style.scss */
 .about-sacr .title-sacr {
   width: 100%;
   height: 100%;
 }
-/* line 207, main_style.scss */
+/* line 228, main_style.scss */
 .about-sacr .title-sacr .title-text {
   position: absolute;
   z-index: 0;
@@ -205,19 +228,19 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   border-radius: 10px;
   background-color: #00000090;
 }
-/* line 216, main_style.scss */
+/* line 237, main_style.scss */
 .about-sacr .title-sacr .title-text h1 {
   font-family: PT_Sans;
   text-indent: 1in;
   color: white;
 }
-/* line 221, main_style.scss */
+/* line 242, main_style.scss */
 .about-sacr .title-sacr .title-text h3 {
   font-family: Minecraft;
   font-size: 16px;
   color: white;
 }
-/* line 228, main_style.scss */
+/* line 249, main_style.scss */
 .about-sacr .title-sacr .title-bg {
   content: inherit;
   background-color: #fff5f525;
@@ -227,10 +250,10 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   z-index: -1;
   overflow: hidden;
   background-position: 0in -2.5in;
-  background-image: url("https://sakura-sedaia.com/assets/images/WPRenders/SoWModTeam_Render.png");
+  background-image: url("assets/images/WPRenders/SoWModTeam_Render.png");
 }
 
-/* line 243, main_style.scss */
+/* line 264, main_style.scss */
 .rig-download-section {
   height: 2in;
   background-color: #333;
@@ -239,15 +262,15 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   color: #fff5f5;
   display: flex;
 }
-/* line 251, main_style.scss */
+/* line 272, main_style.scss */
 .rig-download-section h1 {
   font-family: PT_Sans;
 }
-/* line 254, main_style.scss */
+/* line 275, main_style.scss */
 .rig-download-section span {
   font-family: "Roboto";
 }
-/* line 257, main_style.scss */
+/* line 279, main_style.scss */
 .rig-download-section .download-lr {
   background-color: transparent;
   border: none;
@@ -278,60 +301,60 @@ rigs-dropdown[id="rdp"] .rdp:hover {
   font-family: PT_Sans;
   cursor: pointer;
 }
-/* line 289, main_style.scss */
+/* line 311, main_style.scss */
 .rig-download-section .download-lr:hover {
   background-color: #13b6fb95;
   -webkit-box-shadow: 0 4px 0 0 #04a7eb95;
   box-shadow: 0 4px 0 0 #04a7eb95;
 }
-/* line 294, main_style.scss */
+/* line 316, main_style.scss */
 .rig-download-section .download-extra {
   text-decoration: none;
 }
-/* line 297, main_style.scss */
+/* line 319, main_style.scss */
 .rig-download-section .download-extra:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 301, main_style.scss */
+/* line 323, main_style.scss */
 .rig-download-section .rds-col {
   flex-basis: 50%;
 }
-/* line 304, main_style.scss */
+/* line 326, main_style.scss */
 .rig-download-section .rds-col img {
   position: relative;
   transform: translateY(-15%);
 }
-/* line 309, main_style.scss */
+/* line 331, main_style.scss */
 .rig-download-section .rds-background {
   flex-basis: 25%;
   min-width: 600px;
 }
 
-/* line 316, main_style.scss */
+/* line 338, main_style.scss */
 .features-sacr {
   margin-left: 1in;
   margin-right: 1in;
 }
-/* line 320, main_style.scss */
+/* line 342, main_style.scss */
 .features-sacr h2 {
   font-family: PT_Sans;
   text-align: center;
   font-size: 36px;
 }
-/* line 326, main_style.scss */
+/* line 348, main_style.scss */
 .features-sacr .highlight-features {
   width: 1000px;
   margin: 0 auto;
   background-color: #f3f3f3;
   padding: 10px;
 }
-/* line 331, main_style.scss */
+/* line 353, main_style.scss */
 .features-sacr .highlight-features h2 {
   text-align: left;
   font-size: 24px;
 }
-/* line 336, main_style.scss */
+/* line 358, main_style.scss */
 .features-sacr .highlight-features .row-1-col .feat-overlay {
   font-family: "Noto Sans JP";
   height: 100px;
